# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.

  13 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/emerge: Fixed a 
  traceback related to attempting to concat an int/long to a str. (#60256)

  13 Aug 2004; Jason Stubbs <jstubbs@gentoo.org> bin/emerge:
  Relocated blocker checking code to before pkgsettings.setcpv() is called
  on it in depgraph.create()

  13 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py: 
  Tweaked lockfile, so it attempts a non-blocking lock_ex first, then
  states it's waiting on lock blar, then attempts a blocking lock.  This 
  will be useful for informing the user why portage seems to have hung, 
  and good for debugging.

  13 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/emerge-webrsync:
  Added support for snapshot md5sum's (mirrors now carry them).
  This is used to ensure the fetched snapshot is sane; if it's sane, 
  then we reuse it for sync'ing.  This nulls the -n option, so it's been
  removed. Closes out #15990, but no longer automatically forcing a refetch.
  Refetches are only forced if the md5 is invalid.

  12 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py: 
  Cleaned up fetch a bit more, saner error messages when unable to 
  write to DISTDIR.

  12 Aug 2004; Jason Stubbs <jstubbs@gentoo.org> bin/emerge:
  Fixed the fix for the earlier traceback on installed package not being
  in PORTDIR to remove duplicate work.

  11 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh: 
  Added FEATURES="autoconfig" support. (#55476)

  11 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py: 
  Added check to lockfile and fetch, if file already is owned by 