@@ -9,6 +9,11 @@
     4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
        It is for convenience. Do not mistake this for the actual file.
 
+  13 Aug 2004; Brian Harrign <ferringb@gentoo.org> bin/ebuild.sh: Shifted 
+  the add* sandbox function definitions to before profile.bashrc srcing.
+  As bug #60147 demonstrated, profiles occasionally need to adjust 
+  SANDBOX_WRITE (current case being for /usr/lib64/{conftest,cf}).
+
   13 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/emerge: Fixed a 
   traceback related to attempting to concat an int/long to a str. (#60256)
 
